src/objects/Unit_Number_Structure__c.object
<CustomObject>
    <fields>
        <fullName>Delimiter__c</fullName>
        <label>Delimiter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <label>Mandatory</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Length__c</fullName>
        <label>Maximum Length</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Unit Number Structures</relationshipLabel>
        <relationshipName>Unit_Number_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sorting_Sequence__c</fullName>
        <label>Sorting Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>Numeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AlphaNumeric</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>PROJECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLOOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNIT NO.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Sequence_No__c</fullName>
        <label>Unique Sequence No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Unit Number Structure</label>
    <nameField>
        <label>Unit Number Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Number Structures</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Maximum_Length_of_Unit_Structure</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Maximum_Length__c  &gt; 5,Maximum_Length__c  &lt; 1)</errorConditionFormula>
        <errorDisplayField>Maximum_Length__c</errorDisplayField>
        <errorMessage>Maximum length cannot be greater than 5 OR Less than 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Modification_after_Unit_Structure_act</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Project__r.Unit_Structure_Status__c , &apos;Active&apos;)</errorConditionFormula>
        <errorMessage>Once Unit Structure is Activated,You cannot create or edit Unit Structure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sequence_Number_Value</fullName>
        <active>true</active>
        <errorConditionFormula>Sequence_No__c &lt;1 ||  Sequence_No__c &gt;=6</errorConditionFormula>
        <errorDisplayField>Sequence_No__c</errorDisplayField>
        <errorMessage>Sequence Number value Can only be between 1-5</errorMessage>
    </validationRules>
</CustomObject>